<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ip_address" />

    <EditText
        android:id="@+id/input_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_ip_address"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:paddingTop="16dp" />

    <EditText
        android:id="@+id/input_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_port"
        android:inputType="number" />
</LinearLayout>