<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperator"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_preferences"
            android:layout_gravity="end"
            android:contentDescription="@string/parametres"
            android:paddingEnd="16dp"
            tools:ignore="RtlSymmetry" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/current_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_ip"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="5dp" />

    <TextView
        android:id="@+id/current_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_port"
        app:layout_constraintTop_toBottomOf="@id/current_ip"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/current_port"
        app:layout_constraintBottom_toTopOf="@id/send_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/envoyer"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>